Update user controller
