# docs/swagger.json
@@ -1285,6 +1285,9 @@
                 "tbaAddress": {
                     "type": "string"
                 },
+                "tbaTokenBalance": {
+                    "type": "string"
+                },
                 "updatedAt": {
                     "type": "integer"
                 }
@@ -1464,6 +1467,8 @@
                 1000000000,
                 60000000000,
                 3600000000000,
+                -9223372036854775808,
+                9223372036854775807,
                 1,
                 1000,
                 1000000,
@@ -1480,6 +1485,8 @@
                 "Second",
                 "Minute",
                 "Hour",
+                "minDuration",
+                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
